<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
                </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_10">
                <TextView
                    android:id="@+id/vNip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/margin_padding_10"
                    android:text="NIP LAMA"
                    android:textAllCaps="true"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tiNip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/vNip"
                    android:layout_marginStart="@dimen/margin_padding_10"
                    android:layout_marginEnd="@dimen/margin_padding_10"
                    android:layout_marginBottom="@dimen/margin_padding_10"
                    android:background="@drawable/bg_rounded_textview">
                    <TextView
                        android:id="@+id/edNip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/margin_padding_10"
                        android:paddingTop="@dimen/margin_padding_5"
                        android:paddingBottom="@dimen/margin_padding_5"
                        android:textColor="@android:color/black"
                        android:hint="@string/belum_ada_data"/>
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:id="@+id/vNipbaru"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="NIP BARU"
                    android:paddingStart="@dimen/margin_padding_10"
                    android:layout_below="@id/tiNip"
                    />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tiNipbaru"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/vNipbaru"
                    android:layout_marginStart="@dimen/margin_padding_10"
                    android:layout_marginEnd="@dimen/margin_padding_10"
                    android:layout_marginBottom="@dimen/margin_padding_10"
                    android:background="@drawable/bg_rounded_textview">
                    <TextView
                        android:id="@+id/edNipbaru"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/margin_padding_10"
                        android:paddingTop="@dimen/margin_padding_5"
                        android:paddingBottom="@dimen/margin_padding_5"
                        android:textColor="@android:color/black"
                        android:hint="@string/belum_ada_data"/>
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:id="@+id/vNama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/margin_padding_10"
                    android:layout_below="@id/tiNipbaru"
                    android:text="@string/nama"
                    android:textAllCaps="true"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tiNama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/vNama"
                    android:layout_marginStart="@dimen/margin_padding_10"
                    android:layout_marginEnd="@dimen/margin_padding_10"
                    android:layout_marginBottom="@dimen/margin_padding_10"
                    android:background="@drawable/bg_rounded_textview">
                    <TextView
                        android:id="@+id/edNama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/margin_padding_10"
                        android:paddingTop="@dimen/margin_padding_5"
                        android:paddingBottom="@dimen/margin_padding_5"
                        android:textColor="@android:color/black"
                        android:hint="@string/belum_ada_data"/>
                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:id="@+id/vTempatLahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/margin_padding_10"
                    android:layout_below="@id/tiNama"
                    android:text="@string/tempat_lahir"
                    android:textAllCaps="true"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tiTempatLahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/vTempatLahir"
                    android:layout_marginStart="@dimen/margin_padding_10"
                    android:layout_marginEnd="@dimen/margin_padding_10"
                    android:layout_marginBottom="@dimen/margin_padding_10"
                    android:background="@drawable/bg_rounded_textview">
                    <TextView
                        android:id="@+id/edTempatLahir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/margin_padding_10"
                        android:paddingTop="@dimen/margin_padding_5"
                        android:paddingBottom="@dimen/margin_padding_5"
                        android:textColor="@android:color/black"
                        android:hint="@string/belum_ada_data"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/vTanggalLahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/margin_padding_10"
                    android:layout_below="@id/tiTempatLahir"
                    android:text="@string/tanggal_lahir"
                    android:textAllCaps="true"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tiTanggalLahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/vTanggalLahir"
                    android:layout_marginStart="@dimen/margin_padding_10"
                    android:layout_marginEnd="@dimen/margin_padding_10"
                    android:layout_marginBottom="@dimen/margin_padding_10"
                    android:background="@drawable/bg_rounded_textview">
                    <TextView
                        android:id="@+id/edTanggalLahir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/margin_padding_10"
                        android:paddingTop="@dimen/margin_padding_5"
                        android:paddingBottom="@dimen/margin_padding_5"
                        android:textColor="@android:color/black"
                        android:hint="@string/belum_ada_data"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/vJenisKelamin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/margin_padding_10"
                    android:layout_below="@id/tiTanggalLahir"
                    android:text="@string/jenis_kelamin"
                    android:textAllCaps="true"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tiJenisKelamin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/vJenisKelamin"
                    android:layout_marginStart="@dimen/margin_padding_10"
                    android:layout_marginEnd="@dimen/margin_padding_10"
                    android:layout_marginBottom="@dimen/margin_padding_10"
                    android:background="@drawable/bg_rounded_textview">
                    <TextView
                        android:id="@+id/edJenisKelamin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/margin_padding_10"
                        android:paddingTop="@dimen/margin_padding_5"
                        android:paddingBottom="@dimen/margin_padding_5"
                        android:textColor="@android:color/black"
                        android:hint="@string/belum_ada_data"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/vAgama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/margin_padding_10"
                    android:layout_below="@id/tiJenisKelamin"
                    android:text="@string/agama"
                    android:textAllCaps="true"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tiAgama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/vAgama"
                    android:layout_marginStart="@dimen/margin_padding_10"
                    android:layout_marginEnd="@dimen/margin_padding_10"
                    android:layout_marginBottom="@dimen/margin_padding_10"
                    android:background="@drawable/bg_rounded_textview">
                    <TextView
                        android:id="@+id/edAgama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/margin_padding_10"
                        android:paddingTop="@dimen/margin_padding_5"
                        android:paddingBottom="@dimen/margin_padding_5"
                        android:textColor="@android:color/black"
                        android:hint="@string/belum_ada_data"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/vStatusNikah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/margin_padding_10"
                    android:layout_below="@id/tiAgama"
                    android:text="@string/status_nikah"
                    android:textAllCaps="true"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tiStatusNikah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/vStatusNikah"
                    android:layout_marginStart="@dimen/margin_padding_10"
                    android:layout_marginEnd="@dimen/margin_padding_10"
                    android:layout_marginBottom="@dimen/margin_padding_10"
                    android:background="@drawable/bg_rounded_textview">
                    <TextView
                        android:id="@+id/edStatusNikah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/margin_padding_10"
                        android:paddingTop="@dimen/margin_padding_5"
                        android:paddingBottom="@dimen/margin_padding_5"
                        android:textColor="@android:color/black"
                        android:hint="@string/belum_ada_data"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/vSukuBangsa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/margin_padding_10"
                    android:layout_below="@id/tiStatusNikah"
                    android:text="@string/suku_bangsa"
                    android:textAllCaps="true"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tiSukuBangsa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/vSukuBangsa"
                    android:layout_marginStart="@dimen/margin_padding_10"
                    android:layout_marginEnd="@dimen/margin_padding_10"
                    android:layout_marginBottom="@dimen/margin_padding_10"
                    android:background="@drawable/bg_rounded_textview">
                    <TextView
                        android:id="@+id/edSukuBangsa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/margin_padding_10"
                        android:paddingTop="@dimen/margin_padding_5"
                        android:paddingBottom="@dimen/margin_padding_5"
                        android:textColor="@android:color/black"
                        android:hint="@string/belum_ada_data"/>
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
        </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>