<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_padding_10"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_padding_10"
        android:text="Nama Suami/Istri"
        android:textAllCaps="true"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_10"
        android:layout_marginEnd="@dimen/margin_padding_10"
        android:layout_marginBottom="@dimen/margin_padding_10"
        android:background="@drawable/bg_rounded_textview">
        <TextView
            android:id="@+id/edNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_padding_10"
            android:paddingTop="@dimen/margin_padding_5"
            android:paddingBottom="@dimen/margin_padding_5"
            android:textColor="@android:color/black"
            android:hint="@string/belum_ada_data"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_padding_10"
        android:text="@string/tempat_lahir"
        android:textAllCaps="true"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_10"
        android:layout_marginEnd="@dimen/margin_padding_10"
        android:layout_marginBottom="@dimen/margin_padding_10"
        android:background="@drawable/bg_rounded_textview">
        <TextView
            android:id="@+id/edTempatLahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_padding_10"
            android:paddingTop="@dimen/margin_padding_5"
            android:paddingBottom="@dimen/margin_padding_5"
            android:textColor="@android:color/black"
            android:hint="@string/belum_ada_data"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_padding_10"
        android:text="@string/tanggal_lahir"
        android:textAllCaps="true"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_10"
        android:layout_marginEnd="@dimen/margin_padding_10"
        android:layout_marginBottom="@dimen/margin_padding_10"
        android:background="@drawable/bg_rounded_textview">
        <TextView
            android:id="@+id/edTanggalLahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_padding_10"
            android:paddingTop="@dimen/margin_padding_5"
            android:paddingBottom="@dimen/margin_padding_5"
            android:textColor="@android:color/black"
            android:hint="@string/belum_ada_data"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_padding_10"
        android:text="@string/tanggal_menikah"
        android:textAllCaps="true"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_10"
        android:layout_marginEnd="@dimen/margin_padding_10"
        android:layout_marginBottom="@dimen/margin_padding_10"
        android:background="@drawable/bg_rounded_textview">
        <TextView
            android:id="@+id/edTanggalMenikah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_padding_10"
            android:paddingTop="@dimen/margin_padding_5"
            android:paddingBottom="@dimen/margin_padding_5"
            android:textColor="@android:color/black"
            android:hint="@string/belum_ada_data"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_padding_10"
        android:text="@string/no_buku_nikah"
        android:textAllCaps="true"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_10"
        android:layout_marginEnd="@dimen/margin_padding_10"
        android:layout_marginBottom="@dimen/margin_padding_10"
        android:background="@drawable/bg_rounded_textview">
        <TextView
            android:id="@+id/edNoBukuNikah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_padding_10"
            android:paddingTop="@dimen/margin_padding_5"
            android:paddingBottom="@dimen/margin_padding_5"
            android:textColor="@android:color/black"
            android:hint="@string/belum_ada_data"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_padding_10"
        android:text="Kartu Istri/Suami"
        android:textAllCaps="true"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_10"
        android:layout_marginEnd="@dimen/margin_padding_10"
        android:layout_marginBottom="@dimen/margin_padding_10"
        android:background="@drawable/bg_rounded_textview">
        <TextView
            android:id="@+id/edKartuSuamiIstri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_padding_10"
            android:paddingTop="@dimen/margin_padding_5"
            android:paddingBottom="@dimen/margin_padding_5"
            android:textColor="@android:color/black"
            android:hint="@string/belum_ada_data"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_padding_10"
        android:text="status PNS"
        android:textAllCaps="true"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_10"
        android:layout_marginEnd="@dimen/margin_padding_10"
        android:layout_marginBottom="@dimen/margin_padding_10"
        android:background="@drawable/bg_rounded_textview">
        <TextView
            android:id="@+id/edPns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_padding_10"
            android:paddingTop="@dimen/margin_padding_5"
            android:paddingBottom="@dimen/margin_padding_5"
            android:textColor="@android:color/black"
            android:hint="@string/belum_ada_data"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_padding_10"
        android:text="Pendidikan"
        android:textAllCaps="true"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_10"
        android:layout_marginEnd="@dimen/margin_padding_10"
        android:layout_marginBottom="@dimen/margin_padding_10"
        android:background="@drawable/bg_rounded_textview">
        <TextView
            android:id="@+id/edPendidikan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_padding_10"
            android:paddingTop="@dimen/margin_padding_5"
            android:paddingBottom="@dimen/margin_padding_5"
            android:textColor="@android:color/black"
            android:hint="@string/belum_ada_data"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_padding_10"
        android:text="Pekerjaan"
        android:textAllCaps="true"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_10"
        android:layout_marginEnd="@dimen/margin_padding_10"
        android:layout_marginBottom="@dimen/margin_padding_10"
        android:background="@drawable/bg_rounded_textview">
        <TextView
            android:id="@+id/edPekerjaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_padding_10"
            android:paddingTop="@dimen/margin_padding_5"
            android:paddingBottom="@dimen/margin_padding_5"
            android:textColor="@android:color/black"
            android:hint="@string/belum_ada_data"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_padding_10"
        android:text="Tunjangan"
        android:textAllCaps="true"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_10"
        android:layout_marginEnd="@dimen/margin_padding_10"
        android:layout_marginBottom="@dimen/margin_padding_10"
        android:background="@drawable/bg_rounded_textview">
        <TextView
            android:id="@+id/edTunjangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_padding_10"
            android:paddingTop="@dimen/margin_padding_5"
            android:paddingBottom="@dimen/margin_padding_5"
            android:textColor="@android:color/black"
            android:hint="@string/belum_ada_data"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_padding_10"
        android:text="Sudah Dibayar"
        android:textAllCaps="true"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_10"
        android:layout_marginEnd="@dimen/margin_padding_10"
        android:layout_marginBottom="@dimen/margin_padding_10"
        android:background="@drawable/bg_rounded_textview">
        <TextView
            android:id="@+id/edDibayar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_padding_10"
            android:paddingTop="@dimen/margin_padding_5"
            android:paddingBottom="@dimen/margin_padding_5"
            android:textColor="@android:color/black"
            android:hint="@string/belum_ada_data"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_padding_10"
        android:text="Bulan Dibayar"
        android:textAllCaps="true"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_10"
        android:layout_marginEnd="@dimen/margin_padding_10"
        android:layout_marginBottom="@dimen/margin_padding_10"
        android:background="@drawable/bg_rounded_textview">
        <TextView
            android:id="@+id/edBulanDibayar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_padding_10"
            android:paddingTop="@dimen/margin_padding_5"
            android:paddingBottom="@dimen/margin_padding_5"
            android:textColor="@android:color/black"
            android:hint="@string/belum_ada_data"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>